use postgres database for bloxz

--- a/bloxz-backend-master/BloxzApi/appsettings.json
+++ b/bloxz-backend-master/BloxzApi/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BloxzContext": "Data Source=bloxz.db"
+    "BloxzContext": "User ID = postgres;Password=root;Server=127.0.0.1;Port=5432;Database=bloxz;"
   }
 }
