--- a/bloxz-backend-master/BloxzApi/appsettings.json
+++ b/bloxz-backend-master/BloxzApi/appsettings.json
@@ -9,5 +9,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "BloxzContext": "User ID = postgres;Password=root;Server=127.0.0.1;Port=5432;Database=bloxz;"
+  },
+  "JwtConfig": {
+    "Secret": "DS1"
   }
 }
