--- a/bloxz-backend-master/BloxzApi/appsettings.json
+++ b/bloxz-backend-master/BloxzApi/appsettings.json
@@ -11,6 +11,6 @@
     "BloxzContext": "User ID = postgres;Password=root;Server=127.0.0.1;Port=5432;Database=bloxz;"
   },
   "JwtConfig": {
-    "Secret": "DS1"
+    "Secret": "asdafjt383tgjriohbm01jthhn3onhah"
   }
 }
