--- a/Loadbalancer/nginx.conf
+++ b/Loadbalancer/nginx.conf
@@ -1,8 +1,10 @@
 upstream loadbalancer {
-server 172.17.0.1:3001 weight=6;
-server 172.17.0.1:3002 weight=4;
+server 172.17.0.1:3001;
+server 172.17.0.1:3002;
 }
+
 server {
-location / {
-proxy_pass http://loadbalancer;
-}}
+    location / {
+        proxy_pass http://loadbalancer;
+    }
+}
