--- a/bloxz-master/Dockerfile
+++ b/bloxz-master/Dockerfile
@@ -1,6 +1,13 @@
+FROM node:13.12.0-alpine as build
+WORKDIR /app
+COPY package*.json /app/
+RUN npm install
+COPY ./ /app/
+RUN npm run build
+
 
 FROM nginx:latest
-COPY ./build /var/www
+COPY --from=build /app/build/ /var/www
 COPY nginx.conf /etc/nginx/nginx.conf
 EXPOSE 80
 ENTRYPOINT ["nginx","-g","daemon off;"]
