--- a/bloxz-master/Dockerfile
+++ b/bloxz-master/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:13.12.0-alpine as build
+FROM node:16-alpine as build
 WORKDIR /app
 COPY package*.json /app/
 RUN npm install
@@ -6,7 +6,7 @@ COPY ./ /app/
 RUN npm run build
 
 
-FROM nginx:latest
+FROM nginx:1.20.0-alpine
 COPY --from=build /app/build/ /var/www
 COPY nginx.conf /etc/nginx/nginx.conf
 EXPOSE 80
