--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,5 @@
 version: "3.9"
 
-volumes:
-  db-data:
-
 services:
     app1:
         build:
@@ -35,10 +32,11 @@ services:
             - "8000:80"  
       
     db:
-        image: postgres:10.10
+        image: postgres:13-alpine
         environment:
             POSTGRES_USER: "postgres"
             POSTGRES_PASSWORD: "root"
             POSTGRES_DB: "bloxz"
         volumes:
-            - db-data:/var/lib/postgresql/data
+            - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+
